--- a/about.html
+++ b/about.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="author" content="Heri Setiawan">
-    <meta name="description" content="Personal site Heri Setiawan.">
-    <title>Home Page</title>
-    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
-    <script src="components/bio.js" type="text/javascript" defer></script>
   </head>
   <body>
     <header-component></header-component>
     <main class="global-wrapper">
-      <bio-component></bio-component>
-      <p>Our paraphrase tool has an advanced algorithm for paraphrasing content online. The accurate web-based content spinning was never possible before the paraphraser.io. Removes duplicate content, rewrite sentences, and generate readable articles. Replaces proper synonyms, rephrases like real humans, and paraphrase better than professional writers.</p>
+      <h1>About Page</h1>
     </main>
     <footer-component></footer-component>
   </body>
